# trip-pilot-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  LICENSE  README.md  compose.prod.yaml  compose.yaml  pom.xml
apps/agent-service/: Dockerfile  pyproject.toml
apps/agent-service/src/trip_agent/: __init__.py  main.py
apps/agent-service/src/trip_agent/acquisition/: __init__.py  cli.py  discovery.py  dns.py  extraction.py  extraction_service.py  fetch_models.py  fetching.py  freshness.py  models.py  recording.py  registry.py  repository.py  review.py  scheduling.py  security.py  workflow.py
apps/agent-service/src/trip_agent/guide_intelligence/: __init__.py  api.py  extraction.py  models.py  service.py
apps/agent-service/tests/: test_acquisition_dns_security.py  test_acquisition_dns_transport.py  test_acquisition_extraction.py  test_acquisition_extraction_service.py  test_acquisition_fetcher.py  test_acquisition_freshness.py  test_acquisition_freshness_repository.py  test_acquisition_recording.py  test_acquisition_registry.py  test_acquisition_repository.py  test_acquisition_review.py  test_acquisition_review_repository.py  test_acquisition_scheduler.py  test_acquisition_scheduler_concurrency.py  test_acquisition_scheduler_integration.py  test_amqp_worker.py  test_candidate_ranking.py  test_constraint_optimizer.py  test_health.py  test_knowledge_cli.py  test_knowledge_documents.py  test_knowledge_embeddings.py  test_knowledge_evaluation.py  test_knowledge_repository.py  test_knowledge_service.py  test_map_provider.py  test_planning_context_v2.py  test_planning_knowledge.py  test_planning_v1_regressions.py  test_planning_worker.py  test_redis_cache.py  test_route_provider.py  test_worker_module.py
apps/agent-service/tests/guide_intelligence/: test_api.py  test_extraction.py  test_service.py
apps/web/: Dockerfile  (+7 more)
(+199 files in other folders)
