[project]
name = "trip-agent"
version = "0.1.0"
description = "TripPilot agent orchestration service"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi==0.116.1",
  "pydantic-settings==2.10.1",
  "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==8.4.1",
  "ruff==0.12.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trip_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
