[project]
name = "trip-agent"
version = "0.1.0"
description = "TripPilot agent orchestration service"
requires-python = ">=3.12,<3.14"
dependencies = [
  "aio-pika==9.6.2",
  "beautifulsoup4==4.15.0",
  "fastapi==0.116.1",
  "httpx==0.28.1",
  "ortools==9.14.6206",
  "pgvector==0.5.0",
  "psycopg[binary]==3.3.4",
  "pydantic-settings==2.10.1",
  "redis==7.4.1",
  "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
  "pytest-cov==7.1.0",
  "jsonschema==4.25.1",
  "ruff==0.12.7",
]

[project.scripts]
trip-agent-worker = "trip_agent.worker.amqp:main"
trip-agent-knowledge = "trip_agent.retrieval.cli:main"
trip-agent-acquisition = "trip_agent.acquisition.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trip_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
